--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.2.4",
     "angular2-fontawesome": "^0.9.3",
     "core-js": "^2.4.1",
+    "file-saver": "^1.3.3",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "rxjs": "^5.4.2",
@@ -32,6 +33,7 @@
     "@angular/cli": "1.4.2",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/file-saver": "0.0.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/lodash": "^4.14.74",
